# MoTrackTherapyMobilePublic

./: README.md
MoTrack Therapy/: Podfile
MoTrack Therapy Mac/MoTrack Therapy Mac/: Info.plist  alg_measurer.cpp  alg_measurer.h  main.cpp  main.h  simulator.cpp  simulator.h
MoTrack Therapy Mac/MoTrack Therapy Mac.xcodeproj/: project.pbxproj
MoTrack Therapy Mac/MoTrack Therapy Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MoTrack Therapy Mac/MoTrack Therapy Mac/photos/: accuracy_analysis.xlsx
MoTrack Therapy/MoTrack Therapy/: AppDelegate.swift  CVViewController.swift  FrameExtractor.swift  GoogleService-Info.plist  Info.plist  MoTrack Therapy-Bridging-Header.h  OpenCVWrapper.h  OpenCVWrapper.mm  TutorialViewController.swift  WebViewController.swift
MoTrack Therapy/MoTrack Therapy.xcodeproj/: project.pbxproj
MoTrack Therapy/MoTrack Therapy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MoTrack Therapy/MoTrack Therapy.xcworkspace/: contents.xcworkspacedata
MoTrack Therapy/MoTrack Therapy/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
MoTrackAndroid/: .gitignore  build.gradle  import-summary.txt  settings.gradle
MoTrackAndroid/app/: CMakeLists.txt  build.gradle
MoTrackAndroid/app/src/androidTest/java/com/motracktherapy/motrack/: ExampleInstrumentedTest.java
MoTrackAndroid/app/src/main/: AndroidManifest.xml
MoTrackAndroid/app/src/main/assets/: appsignup.html  appui.html  helperfunctions.js  manifest.json  subtitles.html  test.html  testbasics.html  testfirestore.html  testjquery.html  tryjquery.html
MoTrackAndroid/app/src/main/assets/Dropbox/ui_media/: subtitles_core.vtt
MoTrackAndroid/app/src/main/assets/Dropbox/ui_media/games/: testsubtitles.vtt
MoTrackAndroid/app/src/main/assets/css/: appui.css
MoTrackAndroid/app/src/main/assets/css/themes/: MoTrackTheme.css  MoTrackTheme.min.css  MoTrackThemeForComputer.css  MoTrackThemeForComputer.min.css
MoTrackAndroid/app/src/main/assets/dnnmodels/: tensorflowModel.pbtxt.txt
MoTrackAndroid/app/src/main/cpp/: FaceDetector.cpp  FaceDetector.h  audio_player.cpp  audio_player.h  bilinear_approx.cpp  bilinear_approx.h  calibration.cpp  calibration.h  deviation_catapult.cpp  deviation_catapult.h  deviation_windshield.cpp  deviation_windshield.h  fabduction_analysis.cpp  fabduction_analysis.h  fabduction_peacock.cpp  fabduction_peacock.h  fist_analysis.cpp  fist_analysis.h  fist_paddle.cpp  fist_paddle.h  flexion_cliff.cpp  flexion_cliff.h  flexion_knock.cpp  flexion_knock.h  hook_fist_analysis.cpp  hook_fist_analysis.h  hook_fist_caterpillar.cpp  hook_fist_caterpillar.h  interactive_tutorial.cpp  interactive_tutorial.h  motion_info.cpp  motion_info.h  native-lib.cpp  native-lib.h  pronation_analysis.cpp  pronation_analysis.h  pronation_dial.cpp  pronation_dial.h  pronation_ketchup.cpp  pronation_ketchup.h  (+4 more)
MoTrackAndroid/app/src/main/java/com/motracktherapy/motrack/: AlarmReciever.java  AutoFitTextureView.java  CVActivity.java  CVBackground.java  CustomWebViewClient.java  MainActivity.java  MyAndroidFirebaseMsgService.java  OldWebViewClient.java  TutorialActivity.java  WebAppInterface.java
MoTrackAndroid/app/src/main/res/drawable/: roundedbutton.xml
MoTrackAndroid/app/src/main/res/layout/: activity_cv.xml  activity_cvbackground.xml  activity_main.xml
MoTrackAndroid/app/src/main/res/mipmap-anydpi-v26/: motrack_m_ic_launcher_round.xml
MoTrackAndroid/app/src/main/res/values/: motrack_m_ic_launcher_background.xml  strings.xml
MoTrackAndroid/gradle/wrapper/: gradle-wrapper.properties
MoTrackAndroid/openCVLibrary310/: build.gradle
MoTrackSemanticSegmentation/: analyzeAlgMeasurementData.py  test.txt
MoTrackSemanticSegmentation/OLD/: captureFromWebcam.py  load_data.py
MoTrackSemanticSegmentation/OLD/data/: export-2019-06-02T21_32_07.215Z.json
MoTrackSemanticSegmentation/OLD/vgg_16_ex/: Data_Reader.py  Inference.py  TRAIN.py  assess.py  convertToTflite.py  freezeGraph.py
MoTrackSemanticSegmentation/data/jsons/: export-2019-06-28T01_16_00.022Z.json  export-2019-07-09T21_13_24.940Z.json  export-2019-08-29T11_15_45.852Z.json  export-2019-09-09T11_56_20.053Z.json  export-2019-09-16T02_14_46.560Z.json  export-2019-10-29T16_21_05.755Z.json
MoTrackSemanticSegmentation/data/partitions/: hook_fist.txt  landscape.txt  newFiles_export-2019-08-29T11_15_45.txt  newFiles_export-2019-09-09T11_56_20.txt  newFiles_export-2019-09-16T02_14_46.txt  thumb_out.txt
MoTrackSemanticSegmentation/data/prevMask/: fromSet_test.txt  fromSet_train.txt  fromSet_val.txt
MoTrackSemanticSegmentation/scripts/: analyzeEvals.py  eval.py  exportInference.py  rootkey.csv  selectTrainImages.py  setupLabelboxML.py  testMTurk.py  train.py
MoTrackSemanticSegmentation/scripts/dataUtils/: InferFromWebcam.py  captureFromWebcam.py  load_data.py  load_datav2.py
MoTrackSemanticSegmentation/scripts/evalUtils/: IQR.py  evalWebcam_opencv.py  evalWebcam_opencv_backproj.py  evalWebcam_pb.py  evalWebcam_tflite.py  eval_fromVideo.py
MoTrackSemanticSegmentation/scripts/exportUtils/: convertPbToTflite.py  convertToTflite.py  freezeGraph.py  test.py
MoTrackSemanticSegmentation/scripts/modelUtils/: BuildNetMobileV1.py  BuildNetMobileV1_2lite.py  BuildNetMobileV1_2lite_v2.py  BuildNetMobileV1_2lite_v3.py  BuildNetMobileV1_connected.py  BuildNetMobileV1_deep.py  BuildNetMobileV1_fcn.py  BuildNetMobileV1_fcn_dropout.py  BuildNetMobileV1_layers.py  BuildNetMobileV1_lite.py  BuildNetMobileV1_lite_1fcn.py  BuildNetMobileV1_lite_nobatchnorm.py  BuildNetMobileV1_lite_upsampling_half.py  BuildNetMobileV1_quickdeconv.py  BuildNetMobileV1_quickdeconv2.py  BuildNetMobileV1_quickdeconv3.py  BuildNetMobileV1_superlite.py  BuildNetMobileV1_superlite_smallkernel.py  BuildNetMobileV1_unet.py  BuildNetMobileV1_unet_activation.py  BuildNetMobileV1_unet_lite1.py  BuildNetMobileV1_unet_lite2.py  BuildNetMobileV1_unet_lite2_smooth.py  BuildNetMobileV1_unet_lite4.py  BuildNetMobileV1_unet_transpose.py  BuildNetMultiLayers.py  BuildNetVgg16.py  BuildNet_1x1.py  BuildNet_Unet.py  PrevMask1.py  PrevMask2.py  PrevMask3.py  PrevMask4.py  (+3 more)
(+141 files in other folders)
